[gd_scene load_steps=5 format=2]

[ext_resource path="res://blackpawn2.png" type="Texture" id=1]
[ext_resource path="res://blackpawn.png" type="Texture" id=2]
[ext_resource path="res://AnimatedSprite.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 0.8
} ]

[node name="Player" type="Area2D"]
__meta__ = {
"_edit_group_": true
}

[node name="UpButton" type="Button" parent="."]
margin_left = 848.0
margin_top = 224.0
margin_right = 944.0
margin_bottom = 320.0
text = "^"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RightButton" type="Button" parent="."]
margin_left = 960.0
margin_top = 336.0
margin_right = 1056.0
margin_bottom = 432.0
text = ">"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DownButton" type="Button" parent="."]
margin_left = 848.0
margin_top = 448.0
margin_right = 944.0
margin_bottom = 544.0
text = "v"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftButton" type="Button" parent="."]
margin_left = 736.0
margin_top = 336.0
margin_right = 832.0
margin_bottom = 432.0
text = "<"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 352, 544 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 1 )
animation = "Idle"
playing = true
script = ExtResource( 4 )
[connection signal="pressed" from="UpButton" to="AnimatedSprite" method="_on_UpButton_pressed"]
[connection signal="pressed" from="RightButton" to="AnimatedSprite" method="_on_RightButton_pressed"]
[connection signal="pressed" from="DownButton" to="AnimatedSprite" method="_on_DownButton_pressed"]
[connection signal="pressed" from="LeftButton" to="AnimatedSprite" method="_on_LeftButton_pressed"]
